# cassiopeia

./: CMakeLists.txt  gamepad  h265client.bat  h265client.sh  h265server.sh  package.xml  vp8client.bat  vp8client.sh  vp8server.sh  wiimote.sh
launch/: base.launch  rover-desktop.launch  rover-laptop.launch  rover.launch  sensors.launch  sensors.xml
msg/: Trit.msg
rover-sketch/: rover-sketch.ino
scripts/: all-values.py  arm.py  arm_driver.py  camera.py  camera_control.py  camera_driver.py  cassiopeia_motors.py  connection_strength_pub.py  environmental_sensor.py  environmental_sensor_driver.py  environmental_sensor_node.py  imu.py  imu_driver.py  imu_node.py  keyboard_camera_control.py  motor.py  motor_controller.py  servo.py
scripts/base/: base_input.py  keyboard_camera_control.py
scripts/base/telemetry_display/: sensor_value.py  telemetry_display.py
scripts/rover/: camera_controller.py  motor.py  motor_controller.py
scripts/rover/sensors/: environmental_sensor.py  environmental_sensor_node.py  imu.py  imu_node.py
scripts/sensors/: environmental_sensor.py  environmental_sensor_node.py  imu.py  imu_node.py
scripts/telemetry_display/: artificial_horizon.py  telemetry_display.py
src/: camera_driver.cpp
